# ws407_cmake_example

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
app/: CMakeLists.txt  application.c  version.h
config/: CMakeLists.txt  burn.jlink.in  common.cmake  desktop.cmake  fw_burn.jlink.in  mcu.cmake  mcu_config.cmake  utils.cmake
libs/: CMakeLists.txt
libs/SEGGER_RTT_V762c/: CMakeLists.txt
scripts/: flash_burn.jlink  flash_debug_command.jlink
targets/: CMakeLists.txt
targets/desktop/: CMakeLists.txt  main.c
targets/desktop/io_mock/: io_mock.c
targets/desktop/mocks/: button_mock.c  delay_mock.c  heater_mock.c  level_mock.c  timer_mock.c
targets/stm32f407/: CMakeLists.txt  Makefile  STM32F407VE.ioc  STM32F407VETx_FLASH.ld
targets/stm32f407/Core/Inc/: bme280_defs.h  dwt.h  main.h  stm32f4xx_hal_conf.h
targets/stm32f407/Core/Src/: dwt.c  gpio.c  main.c
targets/stm32f407/src/: SEGGER_RTT_Syscalls_GCC.c  io_gpio.c  time_syscall.c
test/: CMakeLists.txt  common_types_test.c
