# Get target name
get_property(COMMON_TYPES GLOBAL PROPERTY COMMON_TYPES_TEST_NAME_PROPERTY)
# Get inlcudes
get_property(APP_INCLUDE_DIRS GLOBAL PROPERTY APP_INCLUDE_DIRS_PROPERTY)

# Common sources
file(GLOB_RECURSE TEST_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.c")

add_executable(${COMMON_TYPES} ${TEST_SOURCES})

# Include paths
target_include_directories(${COMMON_TYPES} PRIVATE ${APP_INCLUDE_DIRS})